--- a/web_sdk/libraries.yaml
+++ b/web_sdk/libraries.yaml
@@ -43,6 +43,9 @@ dartdevc:
     _js_primitives:
       uri: "../dart-sdk/lib/_internal/js_dev_runtime/private/js_primitives.dart"
 
+    _js_annotations:
+      uri: "../dart-sdk/lib/js/_js_annotations.dart"
+
     _metadata:
       uri: "../dart-sdk/lib/html/html_common/metadata.dart"
 
@@ -98,7 +101,7 @@ dartdevc:
 
     js:
       uri: "../dart-sdk/lib/js/js.dart"
-      patches: "../dart-sdk/lib/_internal/js_dev_runtime/patch/js_patch.dart"    
+      patches: "../dart-sdk/lib/_internal/js_dev_runtime/patch/js_patch.dart"
 
     js_util:
       uri: "../dart-sdk/lib/js_util/js_util.dart"
@@ -173,11 +176,14 @@ dart2js:
 
     js:
       uri: "../dart-sdk/lib/js/js.dart"
-      patches: "../dart-sdk/lib/_internal/js_dev_runtime/patch/js_patch.dart"    
+      patches: "../dart-sdk/lib/_internal/js_dev_runtime/patch/js_patch.dart"
 
     _js:
       uri: "../dart-sdk/lib/js/_js.dart"
       patches: "../dart-sdk/lib/js/_js_client.dart"
+
+    _js_annotations:
+      uri: "../dart-sdk/lib/js/_js_annotations.dart"
 
     js_util:
       uri: "../dart-sdk/lib/js_util/js_util.dart"
